--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,129 @@
       display: none;
     }
   }
+
+  /* Search */
+
+.DocSearch-Button {
+	@apply hidden p-2 m-0 ml-6 w-52 h-[38px] bg-gray-50 rounded-lg border border-gray-300 border-solid shadow-none xl:ml-8 xl:pl-4 md:flex hover:bg-gray-100 xl:w-64 hover:shadow-none focus:shadow-none dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600;
+}
+
+.DocSearch-Button-Placeholder {
+	@apply text-sm font-normal text-gray-500 dark:text-gray-400;
+}
+
+.DocSearch-Search-Icon {
+	@apply w-3 h-3 text-gray-500 md:mr-1 dark:text-gray-400;
+}
+
+.DocSearch-Button-Keys {
+	@apply items-center min-w-0;
+}
+
+.DocSearch-Button-Key:first-child {
+  @apply mr-px text-base;
+}
+
+.DocSearch-Button-Key {
+	@apply pt-1 pb-0 m-0 w-auto text-xs font-normal text-gray-500 bg-none shadow-none dark:text-gray-400;
+}
+
+.DocSearch-Button .DocSearch-Search-Icon {
+	@apply text-gray-500;
+}
+
+.DocSearch-Hit-icon {
+	@apply hidden;
+}
+
+.DocSearch-Hits mark {
+	@apply text-blue-600 dark:text-white decoration-2 underline-offset-2 decoration-blue-600 dark:decoration-white;
+}
+
+.DocSearch-Hit[aria-selected=true] a {
+	@apply bg-blue-700 dark:bg-blue-600;
+}
+
+.DocSearch-Hit-source {
+	@apply pb-1 text-gray-700 bg-white dark:bg-gray-700 dark:text-gray-400;
+}
+
+.DocSearch-Container {
+	@apply bg-gray-900 bg-opacity-50 dark:bg-opacity-80;
+}
+
+.DocSearch-Modal {
+	@apply shadow-none dark:bg-gray-700;
+}
+
+.DocSearch-SearchBar {
+	@apply p-0 border-b border-gray-100 dark:border-gray-600;
+}
+
+.DocSearch-Form {
+	@apply shadow-none dark:bg-gray-700;
+}
+
+.DocSearch-Input {
+	@apply text-sm text-gray-500 shadow-none dark:text-white focus:shadow-none focus:ring-0 dark:bg-gray-700;
+}
+
+.DocSearch-LoadingIndicator svg, .DocSearch-MagnifierLabel svg {
+	@apply w-4 h-4;
+}
+
+.DocSearch-Commands {
+	@apply hidden;
+}
+
+.DocSearch-Footer {
+	@apply h-12 border-t border-gray-100 shadow-none dark:bg-gray-700 dark:border-gray-600;
+}
+
+.DocSearch-Dropdown {
+	@apply bg-white dark:bg-gray-700;
+}
+
+.DocSearch-Hit {
+	@apply pb-2 shadow-none;
+}
+
+.DocSearch-Hit a {
+	@apply bg-gray-50 rounded-lg shadow-none dark:bg-gray-600 dark:hover:bg-blue-600;
+}
+
+.DocSearch-Hit[aria-selected=true] .DocSearch-Hit-Select-Icon,
+.DocSearch-Hit-action-button {
+	@apply hidden;
+}
+
+.DocSearch-Hit .DocSearch-Hit-action:last-child {
+	@apply w-5 h-5;
+	background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+}
+
+.DocSearch-Hit[aria-selected=true] .DocSearch-Hit-action:last-child {
+	background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+}
+
+.DocSearch-Screen-Icon,
+.DocSearch-NoResults-Prefill-List,
+.DocSearch-Cancel {
+	@apply hidden;
+}
+
+.DocSearch-Title {
+	@apply mb-1 text-lg font-normal text-gray-700 dark:text-gray-200;
+}
+
+.DocSearch-Hit-Container {
+	@apply dark:text-gray-300;
+}
+
+.DocSearch-Logo svg {
+	@apply dark:text-gray-400;
+}
+
+.DocSearch-Reset {
+	@apply dark:text-gray-300 dark:hover:text-white hover:text-black;
+}
